--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>timarbuckle.github.io by timarbuckle</title>
-  </head>
-
-  <body>
+---
+layout: default
+---
 
     <header>
       <div class="container">
@@ -53,6 +42,3 @@
       </section>
     </div>
 
-    
-  </body>
-</html>
