--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@ permalink: index.html
    </li>
   {% endfor %}
   </ul>
-</div>
 
-## Go Away
-
+<h2>Go Away</h2>
+<p>
 This site is garbage while i learn how use Jekyll with github pages.
 It will likely be garbage when it is done so spend your time so wisely,
 somewhere else.
-
-## Support
-
+</p>
+<h2>Support</h2>
+<p>
 Having trouble with this site? Too bad, I told you it was garbage!
+</p>
+</div>
