add initial cloudia test page

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 ---
 layout: default
-title: Testing GitHub Pages
+title: Home
 permalink: index.html
 ---
 
 <div id="home">
-  <h2>Blog Posts</h2>
-  <ul class="posts">
-    {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . </small></p>
-    </li>
-    {% endfor %}
-  </ul>
+    <h2>Blog Posts</h2>
+    <ul class="posts">
+      {% for post in site.posts %}
+      <li>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+        <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . </small></p>
+      </li>
+      {% endfor %}
+    </ul>
 
-<h2>Go Away</h2>
-<p>
-This site is garbage while i learn how use Jekyll with github pages.
-It will likely be garbage when it is done so spend your time so wisely,
-somewhere else.
-</p>
+    <h2>Go Away</h2>
+    <p>
+    This site is garbage while i learn how use Jekyll with github pages.
+    It will likely be garbage when it is done so spend your time so wisely,
+    somewhere else.
+    </p>
 
- <h2>Support</h2>
-<p>
-Having trouble with this site? Too bad, I told you it was garbage!
-</p>
+     <h2>Support</h2>
+    <p>
+    Having trouble with this site? Too bad, I told you it was garbage!
+    </p>
 
 </div>
 
