--- a/index.html
+++ b/index.html
@@ -4,29 +4,16 @@ title: Home
 permalink: index.html
 ---
 
-<div id="home">
-    <h2>Blog Posts</h2>
-    <ul class="posts">
-      {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . </small></p>
-      </li>
-      {% endfor %}
-    </ul>
+# main()
 
-    <h2>Go Away</h2>
-    <p>
-    This site is garbage while i learn how use Jekyll with github pages.
-    It will likely be garbage when it is done so spend your time so wisely,
-    somewhere else.
-    </p>
+## functional blogging
 
-     <h2>Support</h2>
-    <p>
-    Having trouble with this site? Too bad, I told you it was garbage!
-    </p>
+blah blah
 
-</div>
+## concurrent blogging
 
-{% include nav.html %}
+more blah blah
+
+## exit()
+bye!
+
